--- a/desafio_globant_diabetes.ipynb
+++ b/desafio_globant_diabetes.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Diabetes\n",
+    "In this dataset you have 3 different outputs:\n",
+    "1.\tNo readmission;\n",
+    "2.\tA readmission in less than 30 days (this situation is not good, because maybe your treatment was not appropriate);\n",
+    "3.\tA readmission in more than 30 days (this one is not so good as well the last one, however, the reason could be the state of the patient.\n",
+    "Your task is either to classify a patient-hospital outcome or to cluster them aiming at finding patterns that give a distinct insight.\n",
+    "\n",
+    "To do so, we suggest you create a notebook, like Jupyter (if you use python) or a Rmarkdown report (in case you use R) and make it available for us, i.e. github.\n",
+    "\n",
+    "Hint to success in your quest: Develop and stay clear of the data science process you'll perform over the dataset and highlight important aspects you might consider affordable to discuss over.\n",
+    "\n",
+    "You have up to a day before the technical interview to share your results of this test.\n",
+    "\n",
+    "Good luck."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
